<?xml version="1.0"?>
<package format="3">
  <name>ros_omron_agv</name>
  <version>0.1.0</version>
  <description>ROS 2 driver package for Omron LD mobile robots using libaria.</description>
  <maintainer email="kalanaratnayake95@gmail.com">stevem</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>libaria</depend>
  <depend>launch_ros</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
